# discord-mcp

./: .env.example  CLAUDE.md  README.md  main.py  optimization_insights.md  performance_results.md  pyproject.toml  pytest.ini
src/discord_mcp/: client.py  client_backup.py  discovery.py  logger.py  messages.py  server.py
tests/: README.md  conftest.py  test_integration.py
